{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 29,
  "lineage": "cd1061be-9d09-9696-178d-49eec8a3df4f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-058e982252626f0b2",
            "domain": "vpc",
            "id": "eipalloc-058e982252626f0b2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-238-23-224.compute-1.amazonaws.com",
            "public_ip": "34.238.23.224",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "QA-nat1"
            },
            "tags_all": {
              "Name": "QA-nat1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05a5d448d394896cf",
            "domain": "vpc",
            "id": "eipalloc-05a5d448d394896cf",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-233-176-86.compute-1.amazonaws.com",
            "public_ip": "3.233.176.86",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "QA-nat2"
            },
            "tags_all": {
              "Name": "QA-nat2"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0626a71f2f4f2e643",
            "domain": "vpc",
            "id": "eipalloc-0626a71f2f4f2e643",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-213-165-140.compute-1.amazonaws.com",
            "public_ip": "18.213.165.140",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "QA-nat3"
            },
            "tags_all": {
              "Name": "QA-nat3"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04823729c75214919",
            "arn": "arn:aws:ec2:us-east-1:353812930160:instance/i-0558eb5009a0ee2f2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0558eb5009a0ee2f2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05a06328c57bb01fa",
            "private_dns": "ip-10-0-100-123.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.100.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b57044e3e8aee813",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09860bd35559e3d74",
            "tags": {
              "Name": "QA-private"
            },
            "tags_all": {
              "Name": "QA-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-040c7f0c4d7cc4472"
            ]
          },
          "dependencies": [
            "aws_security_group.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04823729c75214919",
            "arn": "arn:aws:ec2:us-east-1:353812930160:instance/i-0706763cba488e7cf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0706763cba488e7cf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08b39210fda7899a8",
            "private_dns": "ip-10-0-0-204.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.204",
            "public_ip": "44.212.70.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08c79d776da4223f2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d8c3ab4a528227c3",
            "tags": {
              "Name": "QA-public"
            },
            "tags_all": {
              "Name": "QA-public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08d8fb924c9d8b3a6"
            ]
          },
          "dependencies": [
            "aws_security_group.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353812930160:internet-gateway/igw-0cf4952c240d12bdf",
            "id": "igw-0cf4952c240d12bdf",
            "owner_id": "353812930160",
            "tags": {
              "Name": "QA"
            },
            "tags_all": {
              "Name": "QA"
            },
            "vpc_id": "vpc-06f7860288e42a7c7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-058e982252626f0b2",
            "association_id": "eipassoc-0f88c4916357e18b8",
            "connectivity_type": "public",
            "id": "nat-057ace7221d280cdd",
            "network_interface_id": "eni-07383c93c58394b4d",
            "private_ip": "10.0.0.222",
            "public_ip": "34.238.23.224",
            "subnet_id": "subnet-0d8c3ab4a528227c3",
            "tags": {
              "Name": "QA-main1"
            },
            "tags_all": {
              "Name": "QA-main1"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05a5d448d394896cf",
            "association_id": "eipassoc-064e35b5e353a2ee5",
            "connectivity_type": "public",
            "id": "nat-08648cf0af76f7b64",
            "network_interface_id": "eni-0e0cd1583ff53ecc3",
            "private_ip": "10.0.1.177",
            "public_ip": "3.233.176.86",
            "subnet_id": "subnet-0d92577cc99e29e13",
            "tags": {
              "Name": "QA-main2"
            },
            "tags_all": {
              "Name": "QA-main2"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0626a71f2f4f2e643",
            "association_id": "eipassoc-095b680ec840c0f0c",
            "connectivity_type": "public",
            "id": "nat-044dd960b15737e8f",
            "network_interface_id": "eni-05376d89a2b222383",
            "private_ip": "10.0.2.184",
            "public_ip": "18.213.165.140",
            "subnet_id": "subnet-0d722585571d9894c",
            "tags": {
              "Name": "QA-main3"
            },
            "tags_all": {
              "Name": "QA-main3"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353812930160:route-table/rtb-0d6b16b4eab29841e",
            "id": "rtb-0d6b16b4eab29841e",
            "owner_id": "353812930160",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-057ace7221d280cdd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "QA-private1"
            },
            "tags_all": {
              "Name": "QA-private1"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f7860288e42a7c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353812930160:route-table/rtb-0b663315935fdbc41",
            "id": "rtb-0b663315935fdbc41",
            "owner_id": "353812930160",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08648cf0af76f7b64",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "QA-private2"
            },
            "tags_all": {
              "Name": "QA-private2"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f7860288e42a7c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353812930160:route-table/rtb-00746c272b19e3073",
            "id": "rtb-00746c272b19e3073",
            "owner_id": "353812930160",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-044dd960b15737e8f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "QA-private3"
            },
            "tags_all": {
              "Name": "QA-private3"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f7860288e42a7c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353812930160:route-table/rtb-0750c24d5ff520ccd",
            "id": "rtb-0750c24d5ff520ccd",
            "owner_id": "353812930160",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cf4952c240d12bdf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "QA-public"
            },
            "tags_all": {
              "Name": "QA-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f7860288e42a7c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092b583d9a934edb4",
            "route_table_id": "rtb-0d6b16b4eab29841e",
            "subnet_id": "subnet-09860bd35559e3d74"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031517c86ed103ca8",
            "route_table_id": "rtb-0b663315935fdbc41",
            "subnet_id": "subnet-0166ba73135f125ef"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051c44a466f1df925",
            "route_table_id": "rtb-00746c272b19e3073",
            "subnet_id": "subnet-0de88b5e6363d0752"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09bb5a5bb56c0b543",
            "route_table_id": "rtb-0750c24d5ff520ccd",
            "subnet_id": "subnet-0d8c3ab4a528227c3"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b58f1a79bee7242",
            "route_table_id": "rtb-0750c24d5ff520ccd",
            "subnet_id": "subnet-0d92577cc99e29e13"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06489b11248ec7a86",
            "route_table_id": "rtb-0750c24d5ff520ccd",
            "subnet_id": "subnet-0d722585571d9894c"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353812930160:security-group/sg-040c7f0c4d7cc4472",
            "description": "private security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-040c7f0c4d7cc4472",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "QA-private",
            "name_prefix": "",
            "owner_id": "353812930160",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "QA-private"
            },
            "tags_all": {
              "Name": "QA-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f7860288e42a7c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353812930160:security-group/sg-08d8fb924c9d8b3a6",
            "description": "public security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d8fb924c9d8b3a6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "QA-public",
            "name_prefix": "",
            "owner_id": "353812930160",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "QA-public"
            },
            "tags_all": {
              "Name": "QA-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f7860288e42a7c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353812930160:subnet/subnet-09860bd35559e3d74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09860bd35559e3d74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "353812930160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "QA-private1"
            },
            "tags_all": {
              "Name": "QA-private1"
            },
            "vpc_id": "vpc-06f7860288e42a7c7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353812930160:subnet/subnet-0166ba73135f125ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0166ba73135f125ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "353812930160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "QA-private2"
            },
            "tags_all": {
              "Name": "QA-private2"
            },
            "vpc_id": "vpc-06f7860288e42a7c7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353812930160:subnet/subnet-0de88b5e6363d0752",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de88b5e6363d0752",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "353812930160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "QA-private3"
            },
            "tags_all": {
              "Name": "QA-private3"
            },
            "vpc_id": "vpc-06f7860288e42a7c7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353812930160:subnet/subnet-0d8c3ab4a528227c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8c3ab4a528227c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "353812930160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "QA-public1"
            },
            "tags_all": {
              "Name": "QA-public1"
            },
            "vpc_id": "vpc-06f7860288e42a7c7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353812930160:subnet/subnet-0d92577cc99e29e13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d92577cc99e29e13",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "353812930160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "QA-public2"
            },
            "tags_all": {
              "Name": "QA-public2"
            },
            "vpc_id": "vpc-06f7860288e42a7c7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353812930160:subnet/subnet-0d722585571d9894c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d722585571d9894c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "353812930160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "QA-public3"
            },
            "tags_all": {
              "Name": "QA-public3"
            },
            "vpc_id": "vpc-06f7860288e42a7c7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353812930160:vpc/vpc-06f7860288e42a7c7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f19c4b0f199d4230",
            "default_route_table_id": "rtb-0fa980017864c44c2",
            "default_security_group_id": "sg-0ba38cd10a1c15c7f",
            "dhcp_options_id": "dopt-0e99201cc565c86f0",
            "enable_dns_hostnames": false,
            "enable_dns_support": false,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06f7860288e42a7c7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fa980017864c44c2",
            "owner_id": "353812930160",
            "tags": {
              "Name": "QA"
            },
            "tags_all": {
              "Name": "QA"
            }
          }
        }
      ]
    }
  ]
}